invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_24.src
.IPPcode24
IDIV int@49